objects/Visit__c.object
<CustomObject>
    <description>Used to track face-to-face visits with clients.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Address__c</fullName>
        <formula>Account__r.BillingStreet  &amp; &quot;, &quot; &amp; Account__r.BillingCity &amp; &quot;, &quot; &amp; Account__r.BillingState &amp; &quot;, &quot; &amp; Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <description>Specify the Type of Client or Prospect (by LOB)</description>
        <inlineHelpText>Specify the Type of Client or Prospect (by LOB)</inlineHelpText>
        <label>Client Type</label>
        <picklist>
            <picklistValues>
                <fullName>Client - Admissions (UG/G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client - Advancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect - Admissions (UG/G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect - Advancement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conference__c</fullName>
        <inlineHelpText>You must enter the conference if meeting location is conference</inlineHelpText>
        <label>Conference</label>
        <picklist>
            <picklistValues>
                <fullName>NACAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NACCAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Board Forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional College Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACAC (Dakotas, Iowa, Minnesota, Wisconsin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HACAC (Hawaii)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPACAC (Great Plans, Missouri)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IACAC (Illinois)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INACAC (Indiana)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYACAC (Kentucky)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIACAC (Michigan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OACAC (Ohio)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SACAC (Southern)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACAC (Pennsylvania)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYSACAC (New York)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEACAC (New England)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJACAC (New Jersey)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMACAC (Rocky Mountain)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WACAC (Western)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCACAC (Potomac &amp; Chesapeake)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TACAC (Texas)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AACRAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>Program_Package__r.Fiscal_Year__c</formula>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiated_by__c</fullName>
        <label>Initiated by</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOB_Engagement_Status__c</fullName>
        <formula>Account__r.RecordType.Name &amp; &quot;  &quot; &amp; &quot; (RYL) &quot; &amp; Account__r.r_Current_Year_Account_Status__c  &amp; &quot; (HD) &quot; &amp; Account__r.r_hd_current_year_account_status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB + Engagement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_End_Time__c</fullName>
        <description>Actual Meeting - End Time</description>
        <inlineHelpText>Enter the actual Meeting End Time</inlineHelpText>
        <label>Meeting - End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Location__c</fullName>
        <label>Meeting Location</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Start_Time__c</fullName>
        <description>Actual meeting Start Time</description>
        <inlineHelpText>Enter the actual meeting Start Time</inlineHelpText>
        <label>Meeting - Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Resolution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Conference__c</fullName>
        <label>Other Conference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Package</label>
        <referenceTo>Program_Package__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not able to schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Visit</label>
    <nameField>
        <displayFormat>V-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <recordTypes>
        <fullName>Travel_Request_to_Client_Location</fullName>
        <active>false</active>
        <description>Use this Visit record type to request/specify any travel to a Client or Prospect Campus location</description>
        <label>Travel Request to Client Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Travel_Request_to_Royall_HDQ</fullName>
        <active>false</active>
        <description>Use this travel request to specify which contacts are travelling to/visiting Royall</description>
        <label>Travel Request to Royall HDQ</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Conference_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval( Meeting_Location__c , &quot;Conference&quot;) &amp;&amp; ispickval( Conference__c,&quot;&quot;)</errorConditionFormula>
        <errorMessage>You must enter a conference when meeting location is conference</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Conference_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval( Conference__c ,&quot;Other&quot;) &amp;&amp; isblank( Other_Conference__c)</errorConditionFormula>
        <errorMessage>You must enter the Other Conference Name when Other is selected</errorMessage>
    </validationRules>
</CustomObject>